# finite-deep

.github/workflows/: blank.yml  codeql.yml  docker-image.yml
frnn_deepseek_pipeline_v2_4/: Dockerfile  README.md  persist.py  pipeline.py  pyproject.toml  server.py
frnn_deepseek_pipeline_v2_4/capsule_bridge/: cli_demo.py  deepseek_temporal_core.py
frnn_deepseek_pipeline_v2_4/frnn_path_b/: model.py
frnn_deepseek_pipeline_v2_4/tests/: test_determinism.py  test_shapes.py
